loading up the latest 0.5 into WP
git-svn-id: https://plugins.svn.wordpress.org/remote-my-project-playlist-plugin-for-wordpress/trunk@397237 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/rmp-player-style.css
+++ b/css/rmp-player-style.css
@@ -70,7 +70,6 @@
 	text-align: center;
 	font-size: 12px;
 	font-weight: bold;
-	color: #013366;
 }
 .rmp-playlist-thumbs a:hover span {
 	display: block;
@@ -81,6 +80,20 @@
 	border: 3px #fff solid;
     }
 .rmp-playlist-thumbs a:hover img {
+	filter:alpha(opacity=50);
+	opacity: 0.5;
+}
+.rmp-playlist-thumbs button {
+	display: block;
+	text-decoration: none;
+	border:none; 
+	background:transparent; 
+	cursor: pointer;
+}
+.rmp-playlist-thumbs button:hover span {
+	display: block;
+}
+.rmp-playlist-thumbs button:hover img {
 	filter:alpha(opacity=50);
 	opacity: 0.5;
 }
