--- a/css/rmp-playlist-style.css
+++ b/css/rmp-playlist-style.css
@@ -47,3 +47,18 @@
 	margin: 5px;
 	background-color: #eee;
 }
+
+.rmp-single {
+	margin-top: 20px;
+	width: 100%;
+}
+
+.rmp-current-item {
+	border-color: #eee!important;
+	box-shadow: 3px 3px 3px #111;
+}
+
+.rmp-title {
+	text-align: center;
+	font-weight: bold;
+}
